fix: position action button view properly on ios

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -2737,5 +2737,5 @@ div.customSelect {}
 }
 
 .ios .actionButtonView {
-  top: -25px !important;
+  top: -40px !important;
 }
